--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,16 @@ MarkupSafe==3.0.2
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.3
+
+
+certifi==2024.8.30
+charset-normalizer==3.4.0
+
+
+Flask-Cors==5.0.0
+gunicorn==23.0.0
+idna==3.10
+packaging==24.2
+requests==2.32.3
+urllib3==2.2.3
+
